--- a/docker/Dockerfile_dev-jazzy
+++ b/docker/Dockerfile_dev-jazzy
@@ -1,7 +1,8 @@
 # syntax=docker/dockerfile:1
-FROM osrf/ros:humble-desktop-full AS main-setup
+FROM osrf/ros:jazzy-desktop-full AS main-setup
 
 ENV DEBIAN_FRONTEND=noninteractive
+RUN apt update && apt install -y python3.12
 RUN apt-get update && apt-get install --no-install-recommends -y \
     lsb-release \
     sudo \
@@ -22,6 +23,8 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     libxml2-dev \
     libxml2-utils \
     libxslt1-dev \
+    python3.12-dev \
+    python3.12-venv \
     python3-numpy \
     python3-pyparsing \
     python3-serial \
@@ -32,7 +35,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     default-jre \
     socat \
     ros-dev-tools \
-    ros-humble-launch-pytest \
+    ros-jazzy-launch-pytest \
     && apt-get clean \
     && apt-get -y autoremove \
     && apt-get autoclean \
@@ -44,28 +47,15 @@ ENV PYTHON_PIP_VERSION=23.1.2
 # https://github.com/docker-library/python/issues/365
 ENV PYTHON_SETUPTOOLS_VERSION=65.5.1
 # https://github.com/pypa/get-pip
-ENV PYTHON_GET_PIP_URL=https://github.com/pypa/get-pip/raw/9af82b715db434abb94a0a6f3569f43e72157346/public/get-pip.py
+ENV PYTHON_GET_PIP_URL=https://bootstrap.pypa.io/get-pip.py
 ENV PYTHON_GET_PIP_SHA256=45a2bb8bf2bb5eff16fdd00faef6f29731831c7c59bd9fc2bf1f3bed511ff1fe
 
-RUN set -eux; \
-	\
-	wget -O get-pip.py "$PYTHON_GET_PIP_URL"; \
-	echo "$PYTHON_GET_PIP_SHA256 *get-pip.py" | sha256sum -c -; \
-	\
-	export PYTHONDONTWRITEBYTECODE=1; \
-	\
-	python get-pip.py \
-		--disable-pip-version-check \
-		--no-cache-dir \
-		--no-compile \
-		"pip==$PYTHON_PIP_VERSION" \
-		"setuptools==$PYTHON_SETUPTOOLS_VERSION" \
-	; \
-	rm -f get-pip.py; \
-	\
-	pip --version
-
+RUN apt update
+RUN wget "$PYTHON_GET_PIP_URL"
+RUN python3 get-pip.py
 RUN python -m pip install --no-cache-dir -U future lxml pexpect flake8 empy==3.3.4 pyelftools tabulate pymavlink pre-commit junitparser
+
+
 
 FROM eclipse-temurin:19-jdk-jammy AS dds-gen-builder
 
@@ -126,3 +116,4 @@ USER sky
 WORKDIR /home/sky
 
 RUN sudo apt update && sudo apt upgrade -y
+RUN sudo apt install ros-jazzy-ros-gz -y
