--- a/docker/Dockerfile_dev-ros-rasp
+++ b/docker/Dockerfile_dev-ros-rasp
@@ -1,8 +1,7 @@
 # syntax=docker/dockerfile:1
-FROM osrf/ros:jazzy-desktop-full AS main-setup
+FROM arm64v8/ros:humble AS main-setup
 
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt update && apt install -y python3.12
 RUN apt-get update && apt-get install --no-install-recommends -y \
     lsb-release \
     sudo \
@@ -23,8 +22,6 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     libxml2-dev \
     libxml2-utils \
     libxslt1-dev \
-    python3.12-dev \
-    python3.12-venv \
     python3-numpy \
     python3-pyparsing \
     python3-serial \
@@ -32,10 +29,11 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     libpython3-stdlib \
     libtool-bin \
     zip \
+    unzip \
     default-jre \
     socat \
     ros-dev-tools \
-    ros-jazzy-launch-pytest \
+    ros-humble-launch-pytest \
     && apt-get clean \
     && apt-get -y autoremove \
     && apt-get autoclean \
@@ -47,15 +45,41 @@ ENV PYTHON_PIP_VERSION=23.1.2
 # https://github.com/docker-library/python/issues/365
 ENV PYTHON_SETUPTOOLS_VERSION=65.5.1
 # https://github.com/pypa/get-pip
-ENV PYTHON_GET_PIP_URL=https://bootstrap.pypa.io/get-pip.py
+ENV PYTHON_GET_PIP_URL=https://github.com/pypa/get-pip/raw/9af82b715db434abb94a0a6f3569f43e72157346/public/get-pip.py
 ENV PYTHON_GET_PIP_SHA256=45a2bb8bf2bb5eff16fdd00faef6f29731831c7c59bd9fc2bf1f3bed511ff1fe
 
-RUN apt update
-RUN wget "$PYTHON_GET_PIP_URL"
-RUN python3 get-pip.py
+RUN set -eux; \
+    \
+    wget -O get-pip.py "$PYTHON_GET_PIP_URL"; \
+    echo "$PYTHON_GET_PIP_SHA256 *get-pip.py" | sha256sum -c -; \
+    \
+    export PYTHONDONTWRITEBYTECODE=1; \
+    \
+    python get-pip.py \
+    --disable-pip-version-check \
+    --no-cache-dir \
+    --no-compile \
+    "pip==$PYTHON_PIP_VERSION" \
+    "setuptools==$PYTHON_SETUPTOOLS_VERSION" \
+    ; \
+    rm -f get-pip.py; \
+    \
+    pip --version
+
 RUN python -m pip install --no-cache-dir -U future lxml pexpect flake8 empy==3.3.4 pyelftools tabulate pymavlink pre-commit junitparser
 
+# opencv 4.x cpp compilation
 
+RUN wget -O opencv.zip https://github.com/opencv/opencv/archive/4.x.zip
+RUN wget -O opencv_contrib.zip https://github.com/opencv/opencv_contrib/archive/4.x.zip
+
+RUN unzip opencv.zip
+RUN unzip opencv_contrib.zip
+
+RUN mkdir -p opencv/build && cd opencv/build
+RUN cmake -DOPENCV_EXTRA_MODULES_PATH=../opencv_contrib-4.x/modules ../opencv-4.x
+RUN cmake --build .
+RUN make install
 
 FROM eclipse-temurin:19-jdk-jammy AS dds-gen-builder
 
@@ -84,13 +108,13 @@ ARG ARM_TARBALL="$ARM_ROOT$ARM_ROOT_EXT-x86_64-linux.tar.bz2"
 ARG ARM_TARBALL_URL="https://firmware.ardupilot.org/Tools/STM32-tools/$ARM_TARBALL"
 
 RUN cd /opt \
-	&& wget -qO- "$ARM_TARBALL_URL" | tar jx \
-	&& mv "/opt/$ARM_ROOT$ARM_ROOT_EXT" "/opt/$ARM_ROOT" \
-	&& rm -rf "/opt/$ARM_ROOT/share/doc"
+    && wget -qO- "$ARM_TARBALL_URL" | tar jx \
+    && mv "/opt/$ARM_ROOT$ARM_ROOT_EXT" "/opt/$ARM_ROOT" \
+    && rm -rf "/opt/$ARM_ROOT/share/doc"
 
 # manual ccache setup for arm-none-eabi-g++/arm-none-eabi-gcc
 RUN ln -s /usr/bin/ccache /usr/lib/ccache/arm-none-eabi-g++ \
-	&& ln -s /usr/bin/ccache /usr/lib/ccache/arm-none-eabi-gcc
+    && ln -s /usr/bin/ccache /usr/lib/ccache/arm-none-eabi-gcc
 
 # Set STM32 toolchain to the PATH
 ENV PATH="/opt/$ARM_ROOT/bin:$PATH"
@@ -111,9 +135,34 @@ ENV BUILDLOGS=/tmp/buildlogs
 
 ENV TZ=UTC
 
-RUN useradd -rm -d /home/sky -s /bin/bash -g root -G sudo -u 1001 sky -p "$(openssl caio123 -1 sky)"
+RUN useradd -rm -d /home/sky -s /bin/bash -g root -G sudo -u 1000 sky -p "$(openssl caio123 -1 sky)"
 USER sky
 WORKDIR /home/sky
 
+RUN echo "source /opt/ros/humble/setup.bash" >> ~/.bashrc
+
 RUN sudo apt update && sudo apt upgrade -y
-RUN sudo apt install ros-jazzy-ros-gz -y
+
+RUN sudo apt-get install ros-humble-mavros ros-humble-mavros-extras -y 
+RUN wget https://raw.githubusercontent.com/mavlink/mavros/master/mavros/scripts/install_geographiclib_datasets.sh
+RUN chmod a+x install_geographiclib_datasets.sh
+RUN sudo ./install_geographiclib_datasets.sh
+
+RUN git clone --recurse-submodules https://github.com/SkyRats/ardupilot.git
+RUN cd ardupilot/
+RUN perl -pi -e 's/\r\n|\n|\r/\n/g' ./Tools/environment_install/install-prereqs-ubuntu.sh -y 
+RUN . ~/.profile
+RUN pip3 install mavproxy
+RUN perl -pi -e 's/\r\n|\n|\r/\n/g' ./waf configure --board sitl
+RUN perl -pi -e 's/\r\n|\n|\r/\n/g' ./waf copter
+
+RUN echo "export PATH=$PATH:$HOME/ardupilot/Tools/autotest" >> ~/.bashrc
+RUN echo "export PATH=/usr/lib/ccache:$PATH" >> ~/.bashrc
+RUN echo "alias sa='sim_vehicle.py -v ArduCopter'" >> ~/.bashrc
+RUN echo "alias sag='sim_vehicle.py -v ArduCopter -f gazebo-iris'" >> ~/.bashrc
+
+# XDG_RUNTIME_DIR is needed for gazebo
+ENV XDG_RUNTIME_DIR=/tmp/runtime-sky
+
+# cv_bridge
+RUN sudo apt-get install ros-humble-cv-bridge ros-humble-vision-opencv -y
